--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
+
+		<!-- Piwik -->
+		<script type="text/javascript">
+		var _paq = _paq || [];
+		_paq.push(['trackPageView']);
+		_paq.push(['enableLinkTracking']);
+		_paq.push(['disableCookies']);
+		(function() {
+			var u="//piwik.simplement-web.com/";
+			_paq.push(['setTrackerUrl', u+'piwik.php']);
+			_paq.push(['setSiteId', 15]);
+			var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+			g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+		})();
+		</script>
+		<noscript><p><img src="//piwik.simplement-web.com/piwik.php?idsite=15" style="border:0;" alt="" /></p></noscript>
+		<!-- End Piwik Code -->
+
 	</head>
 	<body id="top">
 
