--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Créateur de sites web</h3>
-							<p>Depuis 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fait des sites web</a> de toutes tailles et avec diverses technologies (symfony, wordpress, prestashop…). Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur. J'ai en particulier acquis des compétences d'accéssibilité et d'ergonomie, je prend un soins particulier à l'image de marque de mes clients.</p>
+							<p>Depuis 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fait des sites web</a> de toutes tailles et avec diverses technologies (symfony, wordpress, prestashop…). Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur. J'ai en particulier acquis des compétences d'accessibilité et d'ergonomie, je prend un soins particulier à l'image de marque de mes clients.</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -65,7 +65,7 @@
 						<div class="image"><img src="images/revenudebase.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Revenu de Base</h3>
-							<p>Je suis conscient que le travail est décorélé des revenus et je propose de mettre en place un Revenu de Base. J'ai mis mes compétences au services de cette idée en réalisant les sites <a href="http://revenudebase.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">revenudebase.info</a>, <a href="http://www.basicincome.org/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">www.basicincome.org</a>, <a href="http://linconditionnel.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">linconditionnel.info</a> et <a href="http://revenu-de-base.simplement-web.com/financement/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">d'autres</a>.</p>
+							<p>Je suis conscient que le travail est décorrélé des revenus et je propose de mettre en place un Revenu de Base. J'ai mis mes compétences au services de cette idée en réalisant les sites <a href="http://revenudebase.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">revenudebase.info</a>, <a href="http://www.basicincome.org/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">www.basicincome.org</a>, <a href="http://linconditionnel.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">linconditionnel.info</a> et <a href="http://revenu-de-base.simplement-web.com/financement/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">d'autres</a>.</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -79,14 +79,14 @@
 						<div class="image"><img src="images/poing-nez.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Jolies Phrases</h3>
-							<p>Je suis amateurs de jolies phrases, de belles tournures et autres citations, n'ont pour la vérité qu'elles peuvent éventuellement contenir mais pour la capacité qu'elles ont à nous faire réflichir. Vous pouvez en recevoir régulièrement en vous inscrivant sur un de mes sites <a href="http://www.citation-ou-proverbe.fr/" target="_blank">www.citation-ou-proverbe.fr</a> ou <a href="http://www.citation-et-proverbe.fr/" target="_blank">www.citation-et-proverbe.fr</a></p>
+							<p>Je suis amateurs de jolies phrases, de belles tournures et autres citations, n'ont pour la vérité qu'elles peuvent éventuellement contenir mais pour la capacité qu'elles ont à nous faire réfléchir. Vous pouvez en recevoir régulièrement en vous inscrivant sur un de mes sites <a href="http://www.citation-ou-proverbe.fr/" target="_blank">www.citation-ou-proverbe.fr</a> ou <a href="http://www.citation-et-proverbe.fr/" target="_blank">www.citation-et-proverbe.fr</a></p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Logiciel libre</h3>
-							<p>J'utilise exclusivement des logiciels libre, non pas pour l'aspect économique qu'il représente mais bien pour leur capacité à me donner le controle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurait trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
+							<p>J'utilise exclusivement des logiciels libre, non pas pour l'aspect économique qu'il représente mais bien pour leur capacité à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurait trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
 						</div>
 					</section>
 					<section class="spotlight">
