--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="image"><img src="images/revenudebase.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Revenu de Base</h3>
-							<p>Je suis conscient que le travail est décorrélé des revenus et je propose de mettre en place un Revenu de Base. J'ai mis mes compétences au services de cette idée en réalisant les sites <a href="http://revenudebase.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">revenudebase.info</a>, <a href="http://www.basicincome.org/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">www.basicincome.org</a>, <a href="http://linconditionnel.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">linconditionnel.info</a> et <a href="http://revenu-de-base.simplement-web.com/financement/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">d'autres</a>.</p>
+							<p>Je suis conscient que le travail est rare et qu'il est décorrélé des revenus et je propose de mettre en place un Revenu de Base. J'ai mis mes compétences au services de cette idée en réalisant les sites <a href="http://revenudebase.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">revenudebase.info</a>, <a href="http://www.basicincome.org/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">www.basicincome.org</a>, <a href="http://linconditionnel.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">linconditionnel.info</a> et <a href="http://revenu-de-base.simplement-web.com/financement/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">d'autres</a>.</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -79,7 +79,7 @@
 						<div class="image"><img src="images/poing-nez.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Jolies Phrases</h3>
-							<p>Je suis amateurs de jolies phrases, de belles tournures et autres citations, n'ont pour la vérité qu'elles peuvent éventuellement contenir mais pour la capacité qu'elles ont à nous faire réfléchir. Vous pouvez en recevoir régulièrement en vous inscrivant sur un de mes sites <a href="http://www.citation-ou-proverbe.fr/" target="_blank">www.citation-ou-proverbe.fr</a> ou <a href="http://www.citation-et-proverbe.fr/" target="_blank">www.citation-et-proverbe.fr</a></p>
+							<p>Je suis amateurs de jolies phrases, de belles tournures et autres citations, non pour la vérité qu'elles peuvent éventuellement contenir mais pour la capacité qu'elles ont à nous faire réfléchir. Vous pouvez en recevoir régulièrement en vous inscrivant sur un de mes sites <a href="http://www.citation-ou-proverbe.fr/" target="_blank">www.citation-ou-proverbe.fr</a> ou <a href="http://www.citation-et-proverbe.fr/" target="_blank">www.citation-et-proverbe.fr</a></p>
 						</div>
 					</section>
 					<section class="spotlight">
