--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<div class="image"><img src="images/ihm.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Professeur</h3>
-							<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des <a href="http://cours.simplement-web.com/ihm/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">cours d'<abbr title="interface homme-machine">IHM</abbr></a>.</p>
+							<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des <a href="http://cours.nathanaelmartel.net/ihm/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">cours d'<abbr title="interface homme-machine">IHM</abbr></a> à l'université de Nice à Sophia Antipolis. J'accompagne également les étudiants de l'université Joseph Fourier à Valence à l'obtention du C2I.</p>
 						</div>
 					</section>
 					<section class="spotlight">
