--- a/index.html
+++ b/index.html
@@ -37,12 +37,20 @@
 					<h1><a href="#">Nathanaël Martel</a></h1>
 					<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> professeur / coworkeur /<br> liberté / simplicité / partage … </p>
 					<ul class="actions">
-						<li><a href="mailto:nat@nathanaelmartel.net" class="button special icon fa-envelope">Contact</a></li>
 						<li><a href="#two" class="button icon fa-chevron-down scrolly">En savoir plus</a></li>
 					</ul>
 				</div>
 				<div class="image"><div class="inner"><img src="images/nathanaelmartel.jpg" alt="" /></div></div>
 			</header>
+
+
+		<!-- Three -->
+			<section id="one" class="wrapper style3 special">
+				<div class="inner alt">
+					<p><a href="tel:+33781948086" ><i class="fa fa-phone" aria-hidden="true"></i> 0781948086</a> &mdash; <a href="mailto:nat@nathanaelmartel.net"><i class="fa fa-envelope-o" aria-hidden="true"></i> nat@nathanaelmartel.net</a></p>
+				</div>
+			</section>
+
 
 		<!-- Two -->
 			<section id="two" class="wrapper">
@@ -51,14 +59,14 @@
 						<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Créateur de sites web</h3>
-							<p>Depuis 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fait des sites web</a> de toutes tailles et avec diverses technologies (symfony, wordpress, prestashop…). Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur. J'ai en particulier acquis des compétences d'accessibilité et d'ergonomie, je prend un soins particulier à l'image de marque de mes clients.</p>
+							<p>Depuis 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> de toutes tailles et avec diverses technologies (symfony, wordpress, prestashop…). Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur. J'ai en particulier acquis des compétences d'accessibilité et d'ergonomie, je prend un soins particulier à l'image de marque de mes clients.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/ihm.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Professeur</h3>
-							<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des <a href="http://cours.nathanaelmartel.net/ihm/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">cours d'<abbr title="interface homme-machine">IHM</abbr></a> à l'université de Nice à Sophia Antipolis. J'accompagne également les étudiants de l'université Joseph Fourier à Valence à l'obtention du C2I.</p>
+							<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des <a href="http://cours.nathanaelmartel.net/ihm/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">cours d'<abbr title="interface homme-machine">IHM</abbr></a> à l'université de Nice à Sophia Antipolis et de Grenoble à Valence. J'accompagne également les étudiants de Grenoble à Valence à l'obtention du C2I.</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -72,28 +80,28 @@
 						<div class="image"><img src="images/eglise-locale.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Sites Chrétiens</h3>
-							<p>Je mets également mes compétences en matière de <a href="http://www.église-locale.net/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">communication</a> aux profits d'Églises locales et autres d'associations chrétienne, à ce titre je fait partie du collectif <a href="https://www.facebook.com/WeAreFuriousCreation" target="_blank">Furious Creation</a>.</p>
+							<p>Je mets également mes compétences en matière de <a href="http://www.église-locale.net/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">communication</a> au profit d'Églises locales et autres d'associations chrétiennes, à ce titre je fais partie du collectif <a href="https://www.facebook.com/SevensideCreation" target="_blank">Sevenside Creation</a>.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/poing-nez.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Jolies Phrases</h3>
-							<p>Je suis amateurs de jolies phrases, de belles tournures et autres citations, non pour la vérité qu'elles peuvent éventuellement contenir mais pour la capacité qu'elles ont à nous faire réfléchir. Vous pouvez en recevoir régulièrement en vous inscrivant sur un de mes sites <a href="http://www.citation-ou-proverbe.fr/" target="_blank">www.citation-ou-proverbe.fr</a> ou <a href="http://www.citation-et-proverbe.fr/" target="_blank">www.citation-et-proverbe.fr</a></p>
+							<p>Je suis amateur de jolies phrases, de belles tournures et autres citations, non pour la vérité qu'elles peuvent éventuellement contenir mais pour la capacité qu'elles ont à nous faire réfléchir. Vous pouvez en recevoir régulièrement en vous inscrivant sur un de mes sites <a href="http://www.citation-ou-proverbe.fr/" target="_blank">www.citation-ou-proverbe.fr</a> ou <a href="http://www.citation-et-proverbe.fr/" target="_blank">www.citation-et-proverbe.fr</a></p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Logiciel libre</h3>
-							<p>J'utilise exclusivement des logiciels libre, non pas pour l'aspect économique qu'il représente mais bien pour leur capacité à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurait trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
+							<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leur capacité à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Travailleur Mobile</h3>
-							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quel drôle d'idée, je préfère rencontrer des gens extra-ordinaire dans les espaces de coworking formidable : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a>, <a href="http://www.la-belleverte.fr/" target="_blank">la belle verte</a>, <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quel drôle d'idée, je préfère rencontrer des gens extra-ordinaire dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a>, <a href="http://www.la-belleverte.fr/" target="_blank">la belle verte</a>, <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
 						</div>
 					</section>
 				</div>
@@ -103,8 +111,12 @@
 			<section id="three" class="wrapper style2 special">
 				<div class="inner alt">
 					<header class="major">
-						<h2>Coordonnées</h2>
-						<p>Vous pouvez me contacter par téléphone : <a href="tel:+33781948086" >07 81 94 80 86</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net">nat@nathanaelmartel.net</a></p>
+						<div itemscope="" itemtype="http://schema.org/Organization">
+		        	<div itemprop="founder" itemscope="" itemtype="http://schema.org/Person">
+				        <h2><a href="https://nathanaelmartel.net/" itemprop="url"><span itemprop="name">Nathanaël Martel</span></a></h2>
+								<p>Vous pouvez me contacter par téléphone : <a class="tel" itemprop="telephone" href="tel:+33781948086" >0781948086</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net" class="mail"><span itemprop="email">nat@nathanaelmartel.net</span></a></p>
+			        </div>
+		        </div>
 					</header>
 				</div>
 			</section>
@@ -115,10 +127,10 @@
 					<li><a href="https://twitter.com/simplementNat" target="_blank" title="twitter"><span class="icon fa-twitter"></span></a></li>
 					<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog"><span class="icon fa-rss"></span></a></li>
 					<li><a href="https://github.com/simplementNat" target="_blank" title="github"><span class="icon fa-github"></span></a></li>
-					<li><a href="http://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin"><span class="icon fa-linkedin"></span></a></li>
-					<li><a href="http://www.flickr.com/photos/catnat/" target="_blank" title="flickr"><span class="icon fa-flickr"></span></a></li>
-					<li><a href="http://vimeo.com/simplementnat" target="_blank" title="vimeo"><span class="icon fa-vimeo"></span></a></li>
-					<li><a href="http://shaarli.fam-martel.eu/" target="_blank" title="liens"><span class="icon fa-external-link"></span></a></li>
+					<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin"><span class="icon fa-linkedin"></span></a></li>
+					<li><a href="https://www.flickr.com/photos/catnat/" target="_blank" title="flickr"><span class="icon fa-flickr"></span></a></li>
+					<li><a href="https://vimeo.com/simplementnat" target="_blank" title="vimeo"><span class="icon fa-vimeo"></span></a></li>
+					<li><a href="https://shaarli.nathanaelmartel.net/" target="_blank" title="liens"><span class="icon fa-external-link"></span></a></li>
 					<li><a href="tel:+33781948086" target="_blank" title="téléphone"><span class="icon fa-phone"></span></a></li>
 					<li><a href="mailto:nat@nathanaelmartel.net" target="_blank" title="mail"><span class="icon fa-envelope"></span></a></li>
 				</ul>
