--- a/index.html
+++ b/index.html
@@ -59,49 +59,31 @@
 						<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Créateur de sites web</h3>
-							<p>Depuis 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> de toutes tailles et avec diverses technologies (symfony, wordpress, prestashop…). Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur. J'ai en particulier acquis des compétences d'accessibilité et d'ergonomie, je prend un soins particulier à l'image de marque de mes clients.</p>
+							<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des application web de gestion sur mesure. Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur dans le but de concevoir des interfaces utile, ergonomique et accessible.</p>
+                            <p>Je travail avec des solutions logiciel libres : PHP, MySQL, sass, git, WordPress, Symfony ou encore piwik.</p>
+                            <p>Je suis certifié expert par Opquast : <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" >«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/ihm.jpg" alt="" /></div>
+						<div class="image"><img src="images/wordcamp.jpg" alt="" /></div>
 						<div class="content">
-							<h3>Professeur</h3>
-							<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des <a href="http://cours.nathanaelmartel.net/ihm/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">cours d'<abbr title="interface homme-machine">IHM</abbr></a> à l'université de Nice à Sophia Antipolis et de Grenoble à Valence. J'accompagne également les étudiants de Grenoble à Valence à l'obtention du C2I.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/revenudebase.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Revenu de Base</h3>
-							<p>Je suis conscient que le travail est rare et qu'il est décorrélé des revenus et je propose de mettre en place un Revenu de Base. J'ai mis mes compétences au services de cette idée en réalisant les sites <a href="http://revenudebase.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">revenudebase.info</a>, <a href="http://www.basicincome.org/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">www.basicincome.org</a>, <a href="http://linconditionnel.info/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">linconditionnel.info</a> et <a href="http://revenu-de-base.simplement-web.com/financement/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">d'autres</a>.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/eglise-locale.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Sites Chrétiens</h3>
-							<p>Je mets également mes compétences en matière de <a href="http://www.église-locale.net/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">communication</a> au profit d'Églises locales et autres d'associations chrétiennes, à ce titre je fais partie du collectif <a href="https://www.facebook.com/SevensideCreation" target="_blank">Sevenside Creation</a>.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/poing-nez.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Jolies Phrases</h3>
-							<p>Je suis amateur de jolies phrases, de belles tournures et autres citations, non pour la vérité qu'elles peuvent éventuellement contenir mais pour la capacité qu'elles ont à nous faire réfléchir. Vous pouvez en recevoir régulièrement en vous inscrivant sur un de mes sites <a href="http://www.citation-ou-proverbe.fr/" target="_blank">www.citation-ou-proverbe.fr</a> ou <a href="http://www.citation-et-proverbe.fr/" target="_blank">www.citation-et-proverbe.fr</a></p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Logiciel libre</h3>
-							<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leur capacité à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
+							<h3>Professeur / Conférencier</h3>
+							<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des cours d'<abbr title="interface homme-machine">IHM</abbr> et de base de données à l'université de Nice à Sophia Antipolis et de l'université de Grenoble à Valence.</p>
+                            <p>J'ai également donné des conférences.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Travailleur Mobile</h3>
-							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quel drôle d'idée, je préfère rencontrer des gens extra-ordinaire dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a>, <a href="http://www.la-belleverte.fr/" target="_blank">la belle verte</a>, <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quel drôle d'idée, je préfère rencontrer des gens extra-ordinaire dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a> ou <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+						</div>
+					</section>
+					<section class="spotlight">
+						<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
+						<div class="content">
+							<h3>Logiciel libre</h3>
+							<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leur capacité à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p><p>Pour vos sites web, j'utilise des logiciels libres : WordPress et Symfony dont la réputation n'est plus à faire.</p>
 						</div>
 					</section>
 				</div>
@@ -114,7 +96,8 @@
 						<div itemscope="" itemtype="http://schema.org/Organization">
 		        	<div itemprop="founder" itemscope="" itemtype="http://schema.org/Person">
 				        <h2><a href="https://nathanaelmartel.net/" itemprop="url"><span itemprop="name">Nathanaël Martel</span></a></h2>
-								<p>Vous pouvez me contacter par téléphone : <a class="tel" itemprop="telephone" href="tel:+33781948086" >0781948086</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net" class="mail"><span itemprop="email">nat@nathanaelmartel.net</span></a></p>
+						<p>Vous pouvez me contacter par téléphone : <a class="tel" itemprop="telephone" href="tel:+33781948086" >0781948086</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net" class="mail"><span itemprop="email">nat@nathanaelmartel.net</span></a></p>
+                        <p><a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Expert Opquast : Maîtrise de la qualité en projet Web"><img src="https://oqs-cdn.com/openbadges/badge_expert.svg" alt="Badge Expert par Opquast" width="200"></a></p>
 			        </div>
 		        </div>
 					</header>
@@ -126,7 +109,7 @@
 				<ul class="icons">
 					<li><a href="https://twitter.com/simplementNat" target="_blank" title="twitter"><span class="icon fa-twitter"></span></a></li>
 					<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog"><span class="icon fa-rss"></span></a></li>
-					<li><a href="https://github.com/simplementNat" target="_blank" title="github"><span class="icon fa-github"></span></a></li>
+					<li><a href="https://github.com/nathanaelmartel" target="_blank" title="github"><span class="icon fa-github"></span></a></li>
 					<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin"><span class="icon fa-linkedin"></span></a></li>
 					<li><a href="https://www.flickr.com/photos/catnat/" target="_blank" title="flickr"><span class="icon fa-flickr"></span></a></li>
 					<li><a href="https://vimeo.com/simplementnat" target="_blank" title="vimeo"><span class="icon fa-vimeo"></span></a></li>
