--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Nathanaël Martel</a></h1>
-					<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> professeur / coworkeur /<br> liberté / simplicité / partage … </p>
+					<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Opquast : Maîtrise de la qualité en projet Web">expert qualité web </a>/<br> professeur / coworkeur /<br> liberté / simplicité / partage … </p>
 					<ul class="actions">
 						<li><a href="#two" class="button icon fa-chevron-down scrolly">En savoir plus</a></li>
 					</ul>
