expert qualite web

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		        	<div itemprop="founder" itemscope="" itemtype="http://schema.org/Person">
 				        <h2><a href="https://nathanaelmartel.net/" itemprop="url"><span itemprop="name">Nathanaël Martel</span></a></h2>
 						<p>Vous pouvez me contacter par téléphone : <a class="tel" itemprop="telephone" href="tel:+33781948086" >0781948086</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net" class="mail"><span itemprop="email">nat@nathanaelmartel.net</span></a></p>
-                        <p><a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Expert Opquast : Maîtrise de la qualité en projet Web"><img src="https://oqs-cdn.com/openbadges/badge_expert.svg" alt="Badge Expert par Opquast" width="200"></a></p>
+                        <p><a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Expert Opquast : Maîtrise de la qualité en projet Web"><img src="images/issuer_QY5WTB.svg" alt="Badge Expert par Opquast" width="200"></a></p>
 			        </div>
 		        </div>
 					</header>
