--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
 						<div class="content">
-							<h3>Travailleur Mobile</h3>
+							<h3>Interdépendant et Mobile</h3>
 							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quel drôle d'idée, je préfère rencontrer des gens extra-ordinaire dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a> ou <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+                            <p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a>.</p>
 						</div>
 					</section>
 					<section class="spotlight">
