--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 						<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Créateur de sites web</h3>
-							<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des application web de gestion sur mesure. Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur dans le but de concevoir des interfaces utile, ergonomique et accessible.</p>
-                            <p>Je travail avec des solutions logiciel libres : PHP, MySQL, sass, git, WordPress, Symfony ou encore piwik.</p>
+							<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure. Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur dans le but de concevoir des interfaces utiles, ergonomiques et accessibles.</p>
+                            <p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, WordPress, Symfony ou encore piwik.</p>
                             <p>Je suis certifié expert par Opquast : <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" >«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
 						</div>
 					</section>
@@ -76,7 +76,7 @@
 						<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Interdépendant et Mobile</h3>
-							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quel drôle d'idée, je préfère rencontrer des gens extra-ordinaire dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a> ou <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a> ou <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
                             <p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a>.</p>
 						</div>
 					</section>
@@ -84,7 +84,7 @@
 						<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Logiciel libre</h3>
-							<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leur capacité à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p><p>Pour vos sites web, j'utilise des logiciels libres : WordPress et Symfony dont la réputation n'est plus à faire.</p>
+							<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p><p>Pour vos sites web, j'utilise des logiciels libres : WordPress et Symfony dont la réputation n'est plus à faire.</p>
 						</div>
 					</section>
 				</div>
