--- a/index.html
+++ b/index.html
@@ -1,125 +1,147 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Nathanaël Martel</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+
+<head>
+	<title>Nathanaël Martel</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+	<link type="text/plain" rel="author" href="Nathanaël Martel - simplement Web" />
 
 
-		<!-- Piwik -->
-		<script type="text/javascript">
+	<!-- Piwik -->
+	<script type="text/javascript">
 		var _paq = _paq || [];
 		_paq.push(['trackPageView']);
 		_paq.push(['enableLinkTracking']);
 		_paq.push(['disableCookies']);
 		(function() {
-			var u="//piwik.simplement-web.com/";
-			_paq.push(['setTrackerUrl', u+'piwik.php']);
+			var u = "//stats.simplement-web.com/";
+			_paq.push(['setTrackerUrl', u + 'piwik.php']);
 			_paq.push(['setSiteId', 15]);
-			var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-			g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+			var d = document,
+				g = d.createElement('script'),
+				s = d.getElementsByTagName('script')[0];
+			g.type = 'text/javascript';
+			g.async = true;
+			g.defer = true;
+			g.src = u + 'piwik.js';
+			s.parentNode.insertBefore(g, s);
 		})();
-		</script>
-		<noscript><p><img src="//piwik.simplement-web.com/piwik.php?idsite=15" style="border:0;" alt="" /></p></noscript>
-		<!-- End Piwik Code -->
+	</script>
+	<noscript>
+		<p><img src="//stats.simplement-web.com/piwik.php?idsite=15" style="border:0;" alt="" /></p>
+	</noscript>
+	<!-- End Piwik Code -->
 
-	</head>
-	<body id="top">
+</head>
 
-		<!-- Header -->
-			<header id="header">
+<body id="top">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="content">
+			<h1><a href="#">Nathanaël Martel</a></h1>
+			<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Opquast : Maîtrise de la qualité en projet Web">expert qualité web
+				</a>/<br> professeur / coworkeur /<br> liberté / simplicité / partage … </p>
+			<ul class="actions">
+				<li><a href="#two" class="button icon fa-chevron-down scrolly">En savoir plus</a></li>
+			</ul>
+		</div>
+		<div class="image">
+			<div class="inner"><img src="images/nathanaelmartel.jpg" alt="" /></div>
+		</div>
+	</header>
+
+
+	<!-- Three -->
+	<section id="one" class="wrapper style3 special">
+		<div class="inner alt">
+			<p><a href="tel:+33781948086"><i class="fa fa-phone" aria-hidden="true"></i> 0781948086</a> &mdash; <a href="mailto:nat@nathanaelmartel.net"><i class="fa fa-envelope-o" aria-hidden="true"></i> nat@nathanaelmartel.net</a></p>
+		</div>
+	</section>
+
+
+	<!-- Two -->
+	<section id="two" class="wrapper">
+		<div class="inner alt">
+			<section class="spotlight">
+				<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
 				<div class="content">
-					<h1><a href="#">Nathanaël Martel</a></h1>
-					<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Opquast : Maîtrise de la qualité en projet Web">expert qualité web </a>/<br> professeur / coworkeur /<br> liberté / simplicité / partage … </p>
-					<ul class="actions">
-						<li><a href="#two" class="button icon fa-chevron-down scrolly">En savoir plus</a></li>
-					</ul>
+					<h3>Créateur de sites web</h3>
+					<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure. Au fil du temps je me suis
+						spécialisé dans la partie «front-end», directement en contact de l'utilisateur dans le but de concevoir des interfaces utiles, ergonomiques et accessibles.</p>
+					<p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, WordPress, Symfony ou encore piwik.</p>
+					<p>Je suis certifié expert par Opquast : <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank">«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
 				</div>
-				<div class="image"><div class="inner"><img src="images/nathanaelmartel.jpg" alt="" /></div></div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/wordcamp.jpg" alt="" /></div>
+				<div class="content">
+					<h3>Professeur / Conférencier</h3>
+					<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des cours d'<abbr title="interface homme-machine">IHM</abbr> et de base de données à l'université de Nice à Sophia Antipolis et de l'université de
+						Grenoble à Valence.</p>
+					<p>J'ai également donné des conférences.</p>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
+				<div class="content">
+					<h3>Interdépendant et Mobile</h3>
+					<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les
+							Satellites</a> ou <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+					<p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a>.</p>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
+				<div class="content">
+					<h3>Logiciel libre</h3>
+					<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais
+						trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
+					<p>Pour vos sites web, j'utilise des logiciels libres : WordPress et Symfony dont la réputation n'est plus à faire.</p>
+				</div>
+			</section>
+		</div>
+	</section>
+
+	<!-- Three -->
+	<section id="three" class="wrapper style2 special">
+		<div class="inner alt">
+			<header class="major">
+				<div itemscope="" itemtype="http://schema.org/Organization">
+					<div itemprop="founder" itemscope="" itemtype="http://schema.org/Person">
+						<h2><a href="https://nathanaelmartel.net/" itemprop="url"><span itemprop="name">Nathanaël Martel</span></a></h2>
+						<p>Vous pouvez me contacter par téléphone : <a class="tel" itemprop="telephone" href="tel:+33781948086">0781948086</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net" class="mail"><span
+									itemprop="email">nat@nathanaelmartel.net</span></a></p>
+						<p><a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Expert Opquast : Maîtrise de la qualité en projet Web"><img src="images/issuer_QY5WTB.svg" alt="Badge Expert par Opquast"
+									width="200"></a></p>
+					</div>
+				</div>
 			</header>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="icons">
+			<li><a href="https://twitter.com/simplementNat" target="_blank" title="twitter"><span class="icon fa-twitter"></span></a></li>
+			<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog"><span class="icon fa-rss"></span></a></li>
+			<li><a href="https://github.com/nathanaelmartel" target="_blank" title="github"><span class="icon fa-github"></span></a></li>
+			<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin"><span class="icon fa-linkedin"></span></a></li>
+			<li><a href="https://www.flickr.com/photos/catnat/" target="_blank" title="flickr"><span class="icon fa-flickr"></span></a></li>
+			<li><a href="https://vimeo.com/simplementnat" target="_blank" title="vimeo"><span class="icon fa-vimeo"></span></a></li>
+			<li><a href="https://shaarli.nathanaelmartel.net/" target="_blank" title="liens"><span class="icon fa-external-link"></span></a></li>
+			<li><a href="tel:+33781948086" target="_blank" title="téléphone"><span class="icon fa-phone"></span></a></li>
+			<li><a href="mailto:nat@nathanaelmartel.net" target="_blank" title="mail"><span class="icon fa-envelope"></span></a></li>
+		</ul>
+	</footer>
 
 
-		<!-- Three -->
-			<section id="one" class="wrapper style3 special">
-				<div class="inner alt">
-					<p><a href="tel:+33781948086" ><i class="fa fa-phone" aria-hidden="true"></i> 0781948086</a> &mdash; <a href="mailto:nat@nathanaelmartel.net"><i class="fa fa-envelope-o" aria-hidden="true"></i> nat@nathanaelmartel.net</a></p>
-				</div>
-			</section>
+</body>
 
-
-		<!-- Two -->
-			<section id="two" class="wrapper">
-				<div class="inner alt">
-					<section class="spotlight">
-						<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Créateur de sites web</h3>
-							<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure. Au fil du temps je me suis spécialisé dans la partie «front-end», directement en contact de l'utilisateur dans le but de concevoir des interfaces utiles, ergonomiques et accessibles.</p>
-                            <p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, WordPress, Symfony ou encore piwik.</p>
-                            <p>Je suis certifié expert par Opquast : <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" >«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/wordcamp.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Professeur / Conférencier</h3>
-							<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des cours d'<abbr title="interface homme-machine">IHM</abbr> et de base de données à l'université de Nice à Sophia Antipolis et de l'université de Grenoble à Valence.</p>
-                            <p>J'ai également donné des conférences.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Interdépendant et Mobile</h3>
-							<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les Satellites</a> ou <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
-                            <p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a>.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Logiciel libre</h3>
-							<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p><p>Pour vos sites web, j'utilise des logiciels libres : WordPress et Symfony dont la réputation n'est plus à faire.</p>
-						</div>
-					</section>
-				</div>
-			</section>
-
-		<!-- Three -->
-			<section id="three" class="wrapper style2 special">
-				<div class="inner alt">
-					<header class="major">
-						<div itemscope="" itemtype="http://schema.org/Organization">
-		        	<div itemprop="founder" itemscope="" itemtype="http://schema.org/Person">
-				        <h2><a href="https://nathanaelmartel.net/" itemprop="url"><span itemprop="name">Nathanaël Martel</span></a></h2>
-						<p>Vous pouvez me contacter par téléphone : <a class="tel" itemprop="telephone" href="tel:+33781948086" >0781948086</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net" class="mail"><span itemprop="email">nat@nathanaelmartel.net</span></a></p>
-                        <p><a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Expert Opquast : Maîtrise de la qualité en projet Web"><img src="images/issuer_QY5WTB.svg" alt="Badge Expert par Opquast" width="200"></a></p>
-			        </div>
-		        </div>
-					</header>
-				</div>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://twitter.com/simplementNat" target="_blank" title="twitter"><span class="icon fa-twitter"></span></a></li>
-					<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog"><span class="icon fa-rss"></span></a></li>
-					<li><a href="https://github.com/nathanaelmartel" target="_blank" title="github"><span class="icon fa-github"></span></a></li>
-					<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin"><span class="icon fa-linkedin"></span></a></li>
-					<li><a href="https://www.flickr.com/photos/catnat/" target="_blank" title="flickr"><span class="icon fa-flickr"></span></a></li>
-					<li><a href="https://vimeo.com/simplementnat" target="_blank" title="vimeo"><span class="icon fa-vimeo"></span></a></li>
-					<li><a href="https://shaarli.nathanaelmartel.net/" target="_blank" title="liens"><span class="icon fa-external-link"></span></a></li>
-					<li><a href="tel:+33781948086" target="_blank" title="téléphone"><span class="icon fa-phone"></span></a></li>
-					<li><a href="mailto:nat@nathanaelmartel.net" target="_blank" title="mail"><span class="icon fa-envelope"></span></a></li>
-				</ul>
-			</footer>
-
-
-	</body>
 </html>
