--- a/index.html
+++ b/index.html
@@ -80,20 +80,11 @@
 				</div>
 			</section>
 			<section class="spotlight">
-				<div class="image"><img src="images/wordcamp.jpg" alt="" /></div>
-				<div class="content">
-					<h3>Professeur / Conférencier</h3>
-					<p>Je partage mes connaissances dans cette spécialisation auprès d'étudiants en donnant des cours d'<abbr title="interface homme-machine">IHM</abbr> et de base de données à l'université de Nice à Sophia Antipolis et de l'université de
-						Grenoble à Valence.</p>
-					<p>J'ai également donné des conférences.</p>
-				</div>
-			</section>
-			<section class="spotlight">
 				<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
 				<div class="content">
 					<h3>Interdépendant et Mobile</h3>
-					<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="http://www.lessatellites.fr/" target="_blank">Les
-							Satellites</a> ou <a href="http://laforgecollective.fr/" target="_blank">La forge collective</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+					<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="https://www.ledrakkar-coworking.fr/" target="_blank">Le
+							Drakkar</a> ou <a href="https://lavoulte-coworking.net/" target="_blank">à la Voulte sur Rhône</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
 					<p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a>.</p>
 				</div>
 			</section>
@@ -129,15 +120,12 @@
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="https://twitter.com/simplementNat" target="_blank" title="twitter"><span class="icon fa-twitter"></span></a></li>
-			<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog"><span class="icon fa-rss"></span></a></li>
-			<li><a href="https://github.com/nathanaelmartel" target="_blank" title="github"><span class="icon fa-github"></span></a></li>
-			<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin"><span class="icon fa-linkedin"></span></a></li>
-			<li><a href="https://www.flickr.com/photos/catnat/" target="_blank" title="flickr"><span class="icon fa-flickr"></span></a></li>
-			<li><a href="https://vimeo.com/simplementnat" target="_blank" title="vimeo"><span class="icon fa-vimeo"></span></a></li>
-			<li><a href="https://shaarli.nathanaelmartel.net/" target="_blank" title="liens"><span class="icon fa-external-link"></span></a></li>
-			<li><a href="tel:+33781948086" target="_blank" title="téléphone"><span class="icon fa-phone"></span></a></li>
-			<li><a href="mailto:nat@nathanaelmartel.net" target="_blank" title="mail"><span class="icon fa-envelope"></span></a></li>
+			<li><a href="https://pouet.chapril.org/@nathanaelmartel" target="_blank" title="Mastodon" rel="me"><i class="icon fa-mastodon"></i></a></li>
+			<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog" rel="me"><span class="icon fa-rss"></span></a></li>
+			<li><a href="https://github.com/simplementNat" target="_blank" title="github" rel="me"><span class="icon fa-github"></span></a></li>
+			<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin" rel="me"><span class="icon fa-linkedin"></span></a></li>
+			<li><a href="tel:+33781948086" target="_blank" title="téléphone" rel="me"><span class="icon fa-phone"></span></a></li>
+			<li><a href="mailto:nat@nathanaelmartel.net" target="_blank" title="mail" rel="me"><span class="icon fa-envelope"></span></a></li>
 		</ul>
 	</footer>
 
